NetBSD Problem Report #50531
From www@NetBSD.org Fri Dec 11 10:01:53 2015
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.NetBSD.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id ED008A6661
for <gnats-bugs@gnats.NetBSD.org>; Fri, 11 Dec 2015 10:01:53 +0000 (UTC)
Message-Id: <20151211100153.1AD62A667E@mollari.NetBSD.org>
Date: Fri, 11 Dec 2015 10:01:53 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/sparc64/sparc64/clock.c:725: bad printf ?
X-Send-Pr-Version: www-1.0
>Number: 50531
>Category: port-sparc64
>Synopsis: src/sys/arch/sparc64/sparc64/clock.c:725: bad printf ?
>Confidential: no
>Severity: non-critical
>Priority: medium
>Responsible: port-sparc64-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Fri Dec 11 10:05:00 +0000 2015
>Closed-Date: Sun Dec 13 20:28:11 +0000 2015
>Last-Modified: Sun Dec 13 20:28:11 +0000 2015
>Originator: David Binderman
>Release: cvs dated 20151210
>Organization:
>Environment:
>Description:
[src/sys/arch/sparc64/sparc64/clock.c:725]: (error) printf format string requires 4 parameters but only 2 are given.
printf("statclock: count %x:%x, limit %x:%x\n",
timerreg_4u.t_timer[1].t_count,timerreg_4u.t_timer[1].t_limit);
>How-To-Repeat:
>Fix:
>Release-Note:
>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/50531 CVS commit: src/sys/arch/sparc64/sparc64
Date: Sun, 13 Dec 2015 13:41:09 -0500
Module Name: src
Committed By: christos
Date: Sun Dec 13 18:41:09 UTC 2015
Modified Files:
src/sys/arch/sparc64/sparc64: clock.c
Log Message:
PR/50531: David Binderman: Add missing printf args
To generate a diff of this commit:
cvs rdiff -u -r1.117 -r1.118 src/sys/arch/sparc64/sparc64/clock.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: wiz@NetBSD.org
State-Changed-When: Sun, 13 Dec 2015 20:28:11 +0000
State-Changed-Why:
christos fixed it.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.