PR/50531: David Binderman: Add missing printf args